--- a/.gitmodules
+++ b/.gitmodules
@@ -63,7 +63,7 @@
 	url = https://github.com/adamnovak/backward-cpp.git
 [submodule "deps/elfutils"]
 	path = deps/elfutils
-	url = git://sourceware.org/git/elfutils.git
+	url = http://sourceware.org/git/elfutils.git
 [submodule "deps/structures"]
 	path = deps/structures
 	url = https://github.com/vgteam/structures.git
